[gd_scene load_steps=4 format=3 uid="uid://e70mcdas83jq"]

[ext_resource type="Script" uid="uid://valu0ppjgmkv" path="res://Scripts/Nights/phone_call_ui.gd" id="1_phone_ui"]
[ext_resource type="FontFile" uid="uid://bfrhphr3nf0vm" path="res://Graphics/Fonts/DeterminationMonoWebRegular-Z5oq.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subtitle"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.3)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PhoneCallUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_phone_ui")

[node name="MuteButton" type="Button" parent="."]
layout_mode = 0
offset_left = -913.0
offset_top = 37.0
offset_right = -783.0
offset_bottom = 77.0
text = "Mute Call"

[node name="SubtitlePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_subtitle")

[node name="MarginContainer" type="MarginContainer" parent="SubtitlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="SubtitleLabel" type="Label" parent="SubtitlePanel/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Subtitle text will appear here"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MuteButton" to="." method="_on_mute_button_pressed"]
